--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,13 @@
 // Colors section
+$dark-grey: #333;
+$blue: #1c88bf;
+$dark-blue: #364051;
+$grey: #666;
+$off-white: #f7f7f7;
 
+// Font size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 // Spacing section
 $s-size: 1.2rem;
